# commitfmt

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  Rules.md  commitfmt.toml  dist-workspace.toml  lefthook.yaml  rustfmt.toml  testbody
.cursor/rules/: code-quality.mdc  crates.mdc
.github/workflows/: benchmark.yml  npm_publish.yml  pypi_publish.yml  qa.yaml  release.yml
crates/commitfmt/: Cargo.toml
crates/commitfmt-benchmark/: Cargo.toml
crates/commitfmt-benchmark/benches/: comparison.rs  formatter.rs  lint.rs  parser.rs
crates/commitfmt-benchmark/resources/cc/: basic.txt  comments_leading.txt  comments_trailing.txt  comments_xl.txt  footer_multiline.txt  multi_paragraph_body.txt  multiline_body.txt  scope.txt  short_body.txt
crates/commitfmt-benchmark/src/: criterion.rs  lib.rs  resources.rs
crates/commitfmt-cc/: Cargo.toml  README.md  footers.md
crates/commitfmt-cc/resources/doc_tests/: footers.md
crates/commitfmt-cc/resources/test_docs/: footers.md  header.md
crates/commitfmt-cc/resources/tests/: tests.md
crates/commitfmt-cc/src/: body.rs  footer.rs  header.rs  lib.rs  message.rs
crates/commitfmt-cc/tests/: test_docs.rs
crates/commitfmt-format/: Cargo.toml
crates/commitfmt-format/src/: footers.rs
crates/commitfmt-git/: Cargo.toml  README.md
crates/commitfmt-linter/: Cargo.toml
crates/commitfmt-linter/docs/: rules.md
crates/commitfmt-linter/docs/body/: case.md  full-stop.md  max-length.md  max-line-length.md
crates/commitfmt-linter/docs/footer/: breaking-exclamation.md  exists.md  key-case.md  min-length.md
crates/commitfmt-linter/docs/header/: description-full-stop.md  description-max-length.md  description-min-length.md  min-length.md  scope-case.md  scope-enum.md  scope-min-length.md  scope-required.md  type-max-length.md  type-min-length.md  type-required.md
crates/commitfmt-linter/src/: case.rs  check.rs  lib.rs  report.rs  rule_set.rs  violation.rs
crates/commitfmt-linter/src/rules/: linter_group.rs  mod.rs  names.rs
crates/commitfmt-linter/src/rules/body/: case.rs  full_stop.rs  leading_newline.rs  max_length.rs  max_line_length.rs  min_length.rs  mod.rs  settings.rs
crates/commitfmt-linter/src/rules/footer/: breaking_exclamation.rs  exists.rs  key_case.rs  max_length.rs  max_line_length.rs  min_length.rs  mod.rs  settings.rs
crates/commitfmt-linter/src/rules/header/: min_length.rs  mod.rs  settings.rs
crates/commitfmt-linter/src/rules/header/description/: description_case.rs  description_full_stop.rs  description_max_length.rs  description_min_length.rs
crates/commitfmt-linter/src/rules/header/kind/: mod.rs  type_case.rs  type_enum.rs  type_max_length.rs  type_min_length.rs
crates/commitfmt-linter/src/rules/header/scope/: scope_case.rs  scope_enum.rs  scope_max_length.rs  scope_min_length.rs  scope_required.rs
crates/commitfmt-macros/: Cargo.toml
crates/commitfmt/benches/: comparison.rs
crates/commitfmt/src/: apply.rs  cli.rs  commitfmt.rs  footers.rs  ignore.rs  lib.rs  logging.rs  main.rs  report.rs  stdin.rs
crates/commitfmt/src/commands/: install.rs  mod.rs  root.rs  stdin.rs  uninstall.rs
crates/commitfmt/src/testing/: mod.rs
crates/commitfmt/src/todo/: install.rs  uninstall.rs
crates/commitfmt/tests/: format.rs  hook.rs  lint.rs  lint_range.rs  verbose.rs  version.rs
crates/commitfmt/tests/snapshots/: hook__error_with_config.snap  lint__cli_configured.snap
crates/commitfmt_cc/: Cargo.toml  README.md  build.rs
crates/commitfmt_cc/resources/doc_tests/: footers.md  header.md
crates/commitfmt_cc/src/: body.rs  footer.rs  header.rs  lib.rs  message.rs
crates/commitfmt_cc/tests/: doc_test.rs  test_docs.rs
crates/commitfmt_config/: Cargo.toml
crates/commitfmt_config/src/: config.rs  lib.rs  params.rs  parse.rs  parse_toml.rs  settings.rs
crates/commitfmt_hook/: Cargo.toml  README.md  build.rs
crates/commitfmt_hook/resources/: prepare-commit-msg.j2.sh
crates/commitfmt_hook/resources/test/: commitfmt.sh
crates/commitfmt_hook/src/: lib.rs  manager.rs  template.rs
crates/commitfmt_hook/tests/: detect_from_path.rs
crates/commitfmt_linter/: Cargo.toml  build.rs
crates/commitfmt_linter/docs/: rules.md
crates/commitfmt_linter/docs/body/: leading-new-line.md  min-length.md
crates/commitfmt_linter/docs/footer/: max-length.md  max-line-length.md
crates/commitfmt_linter/docs/header/: description-case.md  max-length.md  scope-max-length.md  type-case.md  type-enum.md
crates/commitfmt_linter/src/: case.rs  check.rs  lib.rs  params.rs  report.rs  rule_set.rs  violation.rs
crates/commitfmt_linter/src/rules/: linter_group.rs  mod.rs  names.rs
crates/commitfmt_linter/src/rules/body/: case.rs  full_stop.rs  leading_newline.rs  max_length.rs  max_line_length.rs  min_length.rs  mod.rs  settings.rs
crates/commitfmt_linter/src/rules/footer/: breaking_exclamation.rs  exists.rs  max_length.rs  max_line_length.rs  min_length.rs  mod.rs  settings.rs
crates/commitfmt_linter/src/rules/footers/: max_length.rs  mod.rs
crates/commitfmt_linter/src/rules/header/: breaking_exclamation.rs  description_leading_space.rs  leading_space.rs  max_length.rs  min_length.rs  mod.rs  settings.rs
crates/commitfmt_linter/src/rules/header/description/: description_case.rs  description_full_stop.rs  description_leading_space.rs  description_max_length.rs  description_min_length.rs  mod.rs
crates/commitfmt_linter/src/rules/header/kind/: mod.rs  type_case.rs  type_enum.rs  type_max_length.rs  type_min_length.rs  type_required.rs
crates/commitfmt_linter/src/rules/header/scope/: mod.rs  scope_case.rs  scope_enum.rs  scope_max_length.rs  scope_min_length.rs  scope_required.rs
crates/commitfmt_macros/: Cargo.toml
crates/commitfmt_macros/src/: lib.rs  map_names.rs  rules_enum.rs  violation_metadata.rs
crates/commitfmt_tpl_exec/: Cargo.toml  README.md
crates/commitfmt_tpl_exec/src/: lib.rs  parse.rs  render.rs
packaging/pypi/commitfmt/: pyproject.toml
scripts/: install.sh  project_config.py  publish_npm.py  publish_pypi.py  update_version.py
(+51 files in other folders)
