[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.87"
homepage = "https://github.com/mishamyrt/commitfmt"
documentation = "https://github.com/mishamyrt/commitfmt"
repository = "https://github.com/mishamyrt/commitfmt"
authors = ["Mikhael Khrustik <misha@myrt.co>"]
license = "MIT"

[workspace.dependencies]
commitfmt-macros = { path = "crates/commitfmt-macros" }
commitfmt-git = { path = "crates/commitfmt-git" }
commitfmt-cc = { path = "crates/commitfmt-cc" }
commitfmt-linter = { path = "crates/commitfmt-linter" }
commitfmt-workspace = { path = "crates/commitfmt-workspace" }
commitfmt-tpl = { path = "crates/commitfmt-tpl" }
commitfmt-benchmark = { path = "crates/commitfmt-benchmark" }
commitfmt = { path = "crates/commitfmt" }

thiserror = "2.0.11"
serde = "1.0.218"
serde_json = "1.0.139"
serde_yaml_ng = "0.10"
serde_derive = "1.0.218"
regex = "1.11.1"

# Parsing
nom = "8.0.0"
toml = "0.8.20"
build-deps = "0.1.4"
memchr = "2.7.5"

clap = { version = "4.5.30", features = ["derive"] }
log = "0.4.26"
fern = "0.7.1"
colored = "3.0.0"

atty = "0.2.14"
same-file = "1.0.6"
winapi-util = "0.1.9"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.98", features = ["derive", "parsing", "extra-traits", "full"] }
itertools = "0.14.0"
paste = "1.0.15"

test-generator = { git = "https://github.com/JamesGuthrie/test-generator.git", rev = "82e799979980962aec1aa324ec6e0e4cad781f41" }
tempfile = "3.19.1"
criterion = { version = "0.6", features = ["html_reports"] }
codspeed-criterion-compat = "2.10.1"

[workspace.lints.rust]
unreachable_pub = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(codspeed)",
] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Allowed pedantic lints
char_lit_as_u8 = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
implicit_hasher = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
single_match_else = "allow"
too_many_lines = "allow"
needless_raw_string_hashes = "allow"
# Disallowed restriction lints
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
redundant_clone = "warn"
debug_assert_with_mut_call = "warn"
unused_peekable = "warn"
large_stack_arrays = "allow"

[profile.release]
lto = "thin"
codegen-units = 5

[profile.profiling]
inherits = "release"
debug = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"
