[package]
name = "commitfmt-cc"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
build = "build.rs"

[dependencies]
regex = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
nom = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
memchr = { workspace = true }

[dev-dependencies]
serde_derive = { workspace = true }
toml = { workspace = true }
build-deps = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies.test-generator]
# This fork of test-generator adds support for cargo workspaces, see
# also https://github.com/frehberg/test-generator/pull/14
workspace = true

[lints]
workspace = true
