[package]
name = "commitfmt_format"
version = "0.0.1"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
commitfmt_cc = { workspace = true }
commitfmt_workspace = { workspace = true }
commitfmt_git = { workspace = true }
thiserror = { workspace = true }
nom = { workspace = true }
regex = { workspace = true }
