[package]
name = "commitfmt-linter"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
thiserror = { workspace = true }
commitfmt-cc = { workspace = true }
commitfmt-macros = { workspace = true }
nom = { workspace = true }

[build-dependencies]
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
walkdir = "2.3"

[lints]
workspace = true

[dev-dependencies]
insta = "1.43.1"
