[package]
name = "commitfmt"
version = "1.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
commitfmt-cc = { workspace = true }
commitfmt-linter = { workspace = true }
commitfmt-workspace = { workspace = true }
commitfmt-git = { workspace = true }
commitfmt-tpl = { workspace = true }

thiserror = { workspace = true }
tempfile = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
atty = { workspace = true }
fern = { workspace = true }
log = { workspace = true }
same-file = { workspace = true }
winapi-util = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
lazy_static = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
tokio = { workspace = true, features = ["full"] }
insta = "1.43.1"
testing_logger = "0.1.1"

# [[bench]]
# name = "compare"
# harness = false

[lints]
workspace = true

[package.metadata.dist]
dist = true
