[package]
name = "commitfmt"
version = "1.0.10"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
commitfmt-cc = { workspace = true }
commitfmt-linter = { workspace = true }
commitfmt-workspace = { workspace = true }
commitfmt-git = { workspace = true }
commitfmt-tpl = { workspace = true }

thiserror = { workspace = true }
tempfile = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
atty = { workspace = true }
fern = { workspace = true }
log = { workspace = true }
same-file = { workspace = true }
winapi-util = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
insta = { workspace = true }
testing_logger = { workspace = true }
codspeed-criterion-compat = { workspace = true }

[lints]
workspace = true

[package.metadata.dist]
dist = true
