[package]
name = "commitfmt_config"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
thiserror = { workspace = true }
tempfile = { workspace = true }
commitfmt_cc = { workspace = true }
commitfmt_linter = { workspace = true }
fern = { workspace = true }
log = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }

[lints]
workspace = true
