[package]
name = "commitfmt_linter"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
thiserror = { workspace = true }
commitfmt_cc = { workspace = true }
commitfmt_macros = { workspace = true }
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = "2.0.98"
itertools = "0.14.0"
paste = "1.0.15"

[lints]
workspace = true
