[package]
name = "commitfmt_linter"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
thiserror = { workspace = true }
commitfmt_cc = { workspace = true }
commitfmt_macros = { workspace = true }
nom = { workspace = true }

[lints]
workspace = true
