[package]
name = "commitfmt_macros"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
commitfmt_cc = { workspace = true }
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.98", features = ["derive", "parsing", "extra-traits", "full"] }
itertools = "0.14.0"

[lints]
workspace = true

[lib]
proc-macro = true
