[package]
name = "commitfmt_tpl_exec"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
thiserror = { workspace = true }
nom = { workspace = true }

[lints]
workspace = true
