[project]
name = "commitfmt"
authors = [
    {name = "Mikhael Khrustik", email = "misha@myrt.co"},
]
description = "Utility for formatting and verifying the commit message."
version = "1.0.9"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["git", "hook"]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "commitfmt-windows==0.1.5; sys_platform == 'win32'",
    "commitfmt-openbsd==0.1.5; sys_platform == 'openbsd'",
    "commitfmt-freebsd==0.1.5; sys_platform == 'freebsd'",
    "commitfmt-darwin==0.1.5; sys_platform == 'darwin'",
    "commitfmt-linux==0.1.5; sys_platform == 'linux'",
]
scripts = { "commitfmt"="commitfmt.__main__:main" }
